fix: fixed spacing issues and prevent user from entering AVA less than 0 on AVA component

--- a/src/app/dashboard/modules/profile-dashboard/components/edit-availability-dialog/edit-availability-dialog.scss
+++ b/src/app/dashboard/modules/profile-dashboard/components/edit-availability-dialog/edit-availability-dialog.scss
@@ -10,7 +10,6 @@ button[mat-flat-button] {
 .dialog-header {
   display: flex;
   align-items: center;
-  gap: 16px;
 }
 
 .dialog-header mat-icon {
